PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})

# test
SET(VAR a b c)
FOREACH(f ${VAR})
  MESSAGE("f: " ${f})
ENDFOREACH()

SET(VAR2 3)
WHILE(${VAR2} GREATER 0)
  MESSAGE("while f: " ${VAR2})
  MATH(EXPR VAR2 "${VAR} -1")
ENDWHILE()

SET(Boost_LIBRARIES ddddddd)
MESSAGE(testmessage-Boost_LIBRARIES "===> " ${Boost_LIBRARIES} " PTAH ===> " $ENV{PATH})
